# cc-TreeAIBox-plugin

./: LICENSE  README.md  TreeAIBox.py  form.ui  model_zoo.json  pyproject.toml
data/: 280_T2_486.laz
modules/qsm/: applyQSM - Copy.py  applyQSM.py  tree_structure2.xml
modules/woodcls/: branchClsConfig.json  vox3DSegFormer.py  woodCls.py  woodcls_stem_tls_segformer3D_112_20cm(GPU8GB).json  woodcls_stem_tls_segformer3D_112_4cm(GPU12GB).json
pyinstaller/: TreeAIBox.spec
qt-files/src/: form.pyproject  form.qrc  form.ui
scripts/: pyinstaller_builder.py
src/tree_ai_box/: TreeAIBox.py  __about__.py  worflow.docx
src/tree_ai_box/cloudcompare/: plugin.py
src/tree_ai_box/gui/: form.py
src/tree_ai_box/modules/qsm/: applyQSM.py
src/tree_ai_box/modules/woodcls/: __init__.py  stemClsConfig.json  vox3DSegFormer.py  woodCls.py
